syntax = "proto2";
package tzrec.protos;

import "tzrec/protos/module.proto";
import "tzrec/protos/tower.proto";

message DeepFM {
    required MLP deep = 1;
    optional MLP final = 2;
    optional uint32 wide_embedding_dim = 3 [default = 4];
}

message MultiTower {
    repeated Tower towers = 1;
    required MLP final = 2;
}

message MultiTowerDIN {
    repeated Tower towers = 1;
    repeated DINTower din_towers = 2;
    required MLP final = 3;
}

message MultiTowerDINTRT {
    repeated Tower towers = 1;
    repeated DINTower din_towers = 2;
    required MLP final = 3;
}

message SemanticCross {
    required MLP mlp = 1;
    required uint32 query_embeddings_cnt = 2;
    required uint32 item_embeddings_cnt = 3;
}
